<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">寻找合伙人1</string>  
    <string name="username">用户名:</string>
    <string name="password">密码:</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="tourist">游客界面</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="search">查找</string>
    <string name="publishsubmit">发布</string>    
    <string name="title">标题</string>
    <string name="findsubmit">查找</string>
    

</resources>