<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/username" />
    
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userName" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />
    
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passWord" />
    
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/login"
        android:id="@+id/buttonLogin" />
    
       <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/register"
        android:id="@+id/buttonRegister" />
       
        <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="tourist"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/tourist"
        android:id="@+id/buttonTourist" />
    

</LinearLayout>