<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
<Button 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:onClick="login1"
        android:text="@string/add"
        android:id="@+id/buttonLogin1" />

<Button 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:onClick="login2"
        android:text="@string/delete"
        android:id="@+id/buttonLogin1" />

<Button 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:onClick="login3"
        android:text="@string/search"
        android:id="@+id/buttonLogin1" />
    

</LinearLayout>